# HttpServer

./: CMakeLists.txt  Makefile  README.md  body.hpp  compile_server.sh  connection.cpp  connection.hpp  header.hpp  headers.cpp  headers.hpp  index.html  method_types.hpp  request.hpp  request_handler.cpp  request_line.hpp  request_parser.cpp  request_parser.hpp  resource.hpp  response.hpp  server.hpp  session.cpp  session.hpp  session_manager.hpp  status_codes.hpp  status_line.hpp  todo  uncopyable.hpp  uri.hpp
include/: connection.hpp  connection_manager.hpp  request_parser.hpp  response.hpp  session.hpp
src/: connection_manager.cpp  main.cpp  request.hpp  request_handler.hpp  resource.cpp  resource.hpp  response.cpp  server.cpp  session.cpp
tmp/: method_types.hpp  response.hpp
